# carrot-rs

./: Cargo.toml  LICENSE.txt
carrot-crypto/: Cargo.toml
carrot-crypto/src/: account.rs  account_secrets.rs  address_utils.rs  as_crypto.rs  consts.rs  core_types.rs  destination.rs  device.rs  domain_separators.rs  enote.rs  enote_components.rs  enote_utils.rs  hash_functions.rs  lazy_amount_commitment.rs  lib.rs  math_utils.rs  opening.rs  output_set_finalization.rs  payment_proposal.rs  payments.rs  permutate.rs  random.rs  scan.rs  scan_unsafe.rs  transcript.rs  type_macros.rs  unit_testing.rs
carrot-crypto/src/impls/: as_crypto.rs  device.rs  mod.rs  mul.rs  random.rs  transcript.rs
carrot-crypto/tests/: ecdh_tests.rs  enote_scan_tests.rs  keys.rs  utils.rs
carrot-crypto/tests/common/: keys.rs  math.rs  mod.rs  random.rs
